# ont_mcg

./: .gitignore  main.py  pyproject.toml  topic_modeling.py
config/: settings.py
input/: 20240717_metadata_corpus.xlsx
src/data_ingestion/: metadata_integrator.py  pdf_processor.py
src/network_analysis/: network_analyzer.py
src/nlp_analysis/: advanced_nlp.py
src/text_processing/: cleaner.py
src/topic_modeling/: topic_modeler.py
src/trend_analysis/: trend_analyzer.py
src/utils/: gpu_utils.py  multiprocessing_utils.py
src/viz/: academic_viz.py  sankey_generator.py  sankey_generator_cli.py  term_evolution.py  wordcloud_generator.py
