[project]
name = "ont_mcg"
version = "0.1.0"
description = "Analysis tools for management control literature"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "PyMuPDF",
    "nltk",
    "spacy",
    "transformers",
    "torch",
    "gensim",
    "scikit-learn",
    "prophet",
    "networkx",
    "python-louvain",
    "plotly",
    "matplotlib",
    "pynvml",
    "psutil",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]